@@ -7,8 +7,29 @@ import game.items.equipments.armors.Wearing;
 
 import java.util.List;
 
+/**
+ * <h1>HandleArmorBlock Interface</h1>
+ * <p>
+ * The {@code HandleArmorBlock} interface responsible for applying block, healing, and
+ * failure effects based on the equipped armor's defensive capabilities.
+ * </p>
+ *
+ * @author Shee Seng Cheng
+ * @version 1.0.0
+ * @since 2025-11-01
+ */
 public interface HandleArmorBlock
 {
+    /**
+     * Evaluates how armor mitigates incoming damage and applies corresponding effects
+     * such as blocking or healing. this method determines whether the armor successfully
+     * absorbed the attack, failed to protect the actor, or provided healing through overblocking.
+     *
+     * @param target the actor receiving the attack
+     * @param damage the amount of damage dealt by the attacker
+     * @param map    the game map where the combat takes place
+     * @return a formatted message describing the result of the armor's effect
+     */
     static String handleArmorBlock(Actor target, int damage, GameMap map)
     {
         String returnString = "\nNo block/heal effect (no armor)";
@@ -16,7 +37,7 @@ public interface HandleArmorBlock
         if (target.hasAbility(Abilities.BLOCK_ATTACK))
         {
             List<Wearing> armor0 = target.getItemInventoryAs(Wearing.class);
-            Wearing armor = armor0.get(0);
+            Wearing armor = armor0.getFirst();
             int healing = armor.getBlockArmor();
             int remaining = healing - damage;
 
@@ -31,11 +52,11 @@ public interface HandleArmorBlock
                 if (healing <= damage)
                 {
                     returnString = "\n" + target + " has block  " + healing + " damage due to " +
-                                    armor.getSimpleArmorInfo();
+                            armor.getSimpleArmorInfo();
                 } else
                 {
                     returnString = "\n" + target + " has heal back " + remaining + " hitpoints due to " +
-                                    armor.getSimpleArmorInfo();
+                            armor.getSimpleArmorInfo();
                 }
             }
         }
